# fulltextsearch_sample

./: README.md  docker-compose.yml  pyproject.toml
fulltextsearch/: __main__.py  api.py  db.py  models.py
tests/: test_hero.py
